syntax = "proto3";

import "golem/common/uuid.proto";

package golem.common;

message PluginInstallationId {
  golem.common.UUID value = 1;
}
